# lab6

./: CMakeLists.txt  main.c
include/: calculations.h  io.h  matrix.h
src/: calculations.c  io.c  matrix.c
